noinst_LTLIBRARIES = libantlr3c.la

antlr3_headers =	\
	antlr3.h						\
	antlr3baserecognizer.h			\
	antlr3basetree.h				\
	antlr3basetreeadaptor.h			\
	antlr3bitset.h					\
	antlr3collections.h				\
	antlr3commontoken.h				\
	antlr3commontree.h				\
	antlr3commontreeadaptor.h		\
	antlr3commontreenodestream.h	\
	antlr3convertutf.h				\
	antlr3cyclicdfa.h				\
	antlr3debugeventlistener.h		\
	antlr3defs.h					\
	antlr3encodings.h				\
	antlr3errors.h					\
	antlr3exception.h				\
	antlr3filestream.h				\
	antlr3input.h					\
	antlr3interfaces.h				\
	antlr3intstream.h				\
	antlr3lexer.h					\
	antlr3memory.h					\
	antlr3parser.h					\
	antlr3parsetree.h				\
	antlr3recognizersharedstate.h	\
	antlr3rewritestreams.h			\
	antlr3string.h					\
	antlr3tokenstream.h				\
	antlr3treeparser.h				\
	antlr3config.h

libantlr3c_la_SOURCES = \
	antlr3baserecognizer.c			\
	antlr3basetree.c				\
	antlr3basetreeadaptor.c			\
	antlr3bitset.c					\
	antlr3collections.c				\
	antlr3commontoken.c				\
	antlr3commontree.c				\
	antlr3commontreeadaptor.c		\
	antlr3commontreenodestream.c	\
	antlr3convertutf.c				\
	antlr3cyclicdfa.c				\
	antlr3debughandlers.c			\
	antlr3encodings.c				\
	antlr3exception.c				\
	antlr3filestream.c				\
	antlr3inputstream.c				\
	antlr3intstream.c				\
	antlr3lexer.c					\
	antlr3parser.c					\
	antlr3rewritestreams.c			\
	antlr3string.c					\
	antlr3tokenstream.c				\
	antlr3treeparser.c \
	$(antlr3_headers)

EXTRA_DIST = \
	antlr-3.4-complete.jar \
	AUTHORS \
	ChangeLog \
	COPYING \
	INSTALL \
	NEWS \
	README
